# ttd-v4

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/logic/: anime.rs  anime_logic.rs  init.rs  mod.rs  model.rs  todo.rs
src/model/: mod.rs  todo_model.rs
ui/: about.slint  anime.slint  app.slint  global.slint  home.slint  menu.slint  todo.slint
