[package]
name = "ttd-v4"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
reqwest = {version = "0.12.15", features = ["blocking"]}
scraper = "0.23.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
slint = {version = "1.11.0", features = ["renderer-skia", "serde"]}
tokio = {version = "1.45.0", features = ["rt-multi-thread"]}

[build-dependencies]
slint-build = "1.11.0"
